Bug 473242 - Filter brush engine crashes after switching filters
Summary: Filter brush engine crashes after switching filters
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-10 11:34 UTC by killy
Modified: 2023-08-16 16:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description killy 2023-08-10 11:34:47 UTC
SUMMARY

After the filter brush engine switches filter, there is no corresponding filter configuration UI, and the default Gaussian blur filter configuration UI is still used. If the value is adjusted, krita will crash.
Comment 1 Dmitry Kazakov 2023-08-16 16:25:24 UTC
Git commit e5d4773c2995be6028b0379339893897443d330f by Dmitry Kazakov.
Committed on 16/08/2023 at 17:58.
Pushed by dkazakov into branch 'master'.

Fix crash when activating Halftone filter in Filter Brush

We shouldn't recreate the generator widget when the generator is
unchanged, it may cause a destruction of the compressor tight in
the timer handler, which causes a crash.

M  +18   -13   plugins/filters/halftone/KisHalftoneConfigPageWidget.cpp
M  +1    -0    plugins/filters/halftone/KisHalftoneConfigPageWidget.h

https://invent.kde.org/graphics/krita/-/commit/e5d4773c2995be6028b0379339893897443d330f
Comment 2 Dmitry Kazakov 2023-08-16 16:25:32 UTC
Git commit 74a8cf5472249d05a8a4dd9350e3e2331db3c58c by Dmitry Kazakov.
Committed on 16/08/2023 at 17:58.
Pushed by dkazakov into branch 'master'.

Fix a crash when activating Color Index filter in the filter brush

M  +14   -2    plugins/filters/indexcolors/indexcolorpalette.cpp
M  +5    -0    plugins/filters/indexcolors/indexcolors.cpp

https://invent.kde.org/graphics/krita/-/commit/74a8cf5472249d05a8a4dd9350e3e2331db3c58c
Comment 3 Dmitry Kazakov 2023-08-16 16:26:08 UTC
Git commit 7a50879a8cce2a41ac847e15ba36a4a2e7c80d0c by Dmitry Kazakov.
Committed on 16/08/2023 at 18:25.
Pushed by dkazakov into branch 'krita/5.2'.

Fix crash when activating Halftone filter in Filter Brush

We shouldn't recreate the generator widget when the generator is
unchanged, it may cause a destruction of the compressor tight in
the timer handler, which causes a crash.

M  +18   -13   plugins/filters/halftone/KisHalftoneConfigPageWidget.cpp
M  +1    -0    plugins/filters/halftone/KisHalftoneConfigPageWidget.h

https://invent.kde.org/graphics/krita/-/commit/7a50879a8cce2a41ac847e15ba36a4a2e7c80d0c
Comment 4 Dmitry Kazakov 2023-08-16 16:26:16 UTC
Git commit 5e5dc663f6be0621135f3ecb948d5e6075815f7d by Dmitry Kazakov.
Committed on 16/08/2023 at 18:25.
Pushed by dkazakov into branch 'krita/5.2'.

Fix a crash when activating Color Index filter in the filter brush

M  +14   -2    plugins/filters/indexcolors/indexcolorpalette.cpp
M  +5    -0    plugins/filters/indexcolors/indexcolors.cpp

https://invent.kde.org/graphics/krita/-/commit/5e5dc663f6be0621135f3ecb948d5e6075815f7d