Fix crash when activating Halftone filter in Filter Brush

We shouldn't recreate the generator widget when the generator is
unchanged, it may cause a destruction of the compressor tight in
the timer handler, which causes a crash.

BUG:473242